--- a/sample project/css/style.css
+++ b/sample project/css/style.css
@@ -214,3 +214,76 @@ header{
     float: left;
     margin: auto 25px;
 }
+
+
+/**********************************/
+/*          Styling Footer        */
+/**********************************/
+.company-details{
+    overflow: hidden;
+    padding: 3em 0em;
+    background: #E3F0F7;
+    text-align: center;
+    margin-top: 5em;
+}
+
+
+/*Align 3 columns in one. */
+#footer #col1,
+#footer #col2,
+#footer #col3{
+    float: left;
+    width: 320px;
+    padding: 0px 40px 0px 40px;
+}
+
+#footer #icon{
+    display: block;
+    margin-bottom: 1em;
+    font-size: 3em;
+}
+
+/*Add styles to basic layout. */
+.copyright{
+    overflow: hidden;
+    padding: 3em 0em;
+    border-top: 2-px solid rgba(255, 255, 255, 0.08);
+    text-align: center;
+    background: #4CAF50;
+}
+
+/*Add style to paragraph element*/
+.copyright p{
+    letter-spacing: 1px;
+    font-size: 0.90em;
+    color: rgba(255, 255, 255, 0.6)
+}
+
+/*Add style to anchor tag. */
+.copyright a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+/*Add styles to social icons*/
+ul.contact{
+    margin: 0;
+    padding: 2em 0em 0em 0em;
+    list-style: none;
+}
+
+ul.contact li{
+    display: inline-block;
+    padding: 0em 0.10em;
+    font-size: 1em;
+}
+
+ul.contact li a{
+    color: #FFF;
+    display: inline-block;
+    background: #4C93B9;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
